--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "app.js",
   "devDependencies": {
-    "@webpack-cli/init": "^1.1.1",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
+    "@material-ui/core": "^4.11.2",
+    "@webpack-cli/init": "^1.1.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "@material-ui/core": "^4.11.2"
+    "webpack": "^5.14.0",
+    "webpack-cli": "^4.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
