--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "main": "app.js",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1",
-    "axios": "^0.21.1"
+    "webpack-cli": "^4.3.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
   },
   "repository": {
     "type": "git",
