--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "przewodnik-gorski",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "App.js",
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
