--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-window": "^1.8.6",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1"
   },
